test/Fail/Issue1639.err
Issue1639.agda:3,1-5,12: error: [Syntax.WrongContentBlock]
A data definition can only contain type signatures, possibly under
keyword instance
